--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "zod": "^3.22.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2"
   },
   "name": "projeto-rede-social-api",
   "description": "",
