--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "typeorm": "^0.3.17",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
     "zod": "^3.22.1"
@@ -24,9 +25,15 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.3",
-    "prisma": "^5.7.0"
+    "jest": "^29.7.0",
+    "prisma": "^5.7.0",
+    "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   },
   "name": "projeto-rede-social-api",
   "description": "",
@@ -36,7 +43,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --ignore-watch node_modules --rs --cls src/server.ts",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
