--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
+    "shortid": "^2.2.16",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typeorm": "^0.3.17",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
     "zod": "^3.22.1"
@@ -27,9 +27,11 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/shortid": "^0.0.32",
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.3",
     "jest": "^29.7.0",
+    "nodemailer-mock": "^2.0.4",
     "prisma": "^5.7.0",
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
